Efetuado primeiras configurações para conexão com o banco de dados PostgreSql e criado o Contexto para o Db

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaltConnection": "Host=localhost;Port=5432;Username=postgres;Password=12345;Database=library_system_db;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
