--- a/Api/Properties/launchSettings.json
+++ b/Api/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:10987",
-      "sslPort": 44347
+      "applicationUrl": "http://localhost:19390",
+      "sslPort": 44354
     }
   },
   "profiles": {
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "LibrarySystem": {
+    "Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
